--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <ul class="faq__questions">
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    O que está incluído no Disney+?<span>+</span>
+                    <span class="span">O que está incluído no Disney+?</span>
                 </div>
                 
                 <div class="faq__questions__item__answer text--big">
@@ -263,7 +263,7 @@
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Já tem o Disney+ ou o Star+ e quer o combo+?<span>+</span>
+                    <span class="span">Já tem o Disney+ ou o Star+ e quer o combo+?</span>
                 </div>
                 <div class="faq__questions__item__answer text--big">
                     <p>
@@ -293,7 +293,7 @@
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Quais formas de pagamento posso utilizar?<span>+</span>
+                    <span class="span">Quais formas de pagamento posso utilizar?</span>
                 </div>
                 <div class="faq__questions__item__answer text--big">
                     <p>
@@ -303,9 +303,8 @@
             </li>
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Como posso ver conteúdo com classificação indicativa até 16 e 18?<span>+</span>
+                    <span class="span">Como posso ver conteúdo com classificação indicativa até 16 e 18?</span>
                 </div>
-                <span>+</span>
                 <div class="faq__questions__item__answer text--big">
                     <p>
                         Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental do perfil. É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
